<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticeApp</string>
    <string name="action_settings">Settings</string>
    <string name="make_call">Make a Call</string>
    <string name="calendar">Show Calendar, Set Reminder</string>
    <string name="browser">Open Browser</string>
    <string name="address">View Address Book</string>
    <string name="location">Show My Location, Go Somewhere</string>
    <string name="sms">Send / Read SMS text messages</string>
    <string name="call">Call</string>
    <string name="hint_number">Enter phone number</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="calendar_view">Show Calendar, Set Reminder</string>
    <string name="reminder">Add Reminder</string>
    <string name="reminder_save">Save</string>
    <string name="hint_description">Enter reminder description</string>
    <string name="hint_time">Tap to pick time</string>
    <string name="alarm">Alarm</string>
    <string name="title_activity_make_call">MakeCall</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_open_browser">OpenBrowser</string>
    <string name="title_activity_address_book">AddressBook</string>
    <string name="thumbnail">Contact\'s thumbnail photo</string>
    <string name="title_activity_location_main">LocationMain</string>
    <string name="location_map">Show my location on map</string>
    <string name="location_dialog">Show my location in pop up</string>
    <string name="title_activity_smsmain">SMSMain</string>
    <string name="smsread">Read SMS</string>
    <string name="smswrite">Compose SMS</string>
    <string name="cancel_sms">Cancel</string>
    <string name="send_sms">Send</string>
    <string name="speech_to_text">To enable voice dictation, click message box, then click microphone on keyboard to dictate message. Press return when finished.</string>

</resources>
