<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#939393"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.azurespot.practiceapp.Calendar" >
 
    <EditText
        android:id="@+id/choose_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:padding="20dp"
        android:textSize="25sp"
        android:background="#d3d3d3"
        android:gravity="center"
        android:hint="@string/hint_time"
        android:inputType="time" />

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="320dp"
	    android:layout_marginBottom="15dp">
	    
	    <Button
	        android:id="@+id/button_reminder"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:background="@drawable/reminder_btn"
	        android:padding="15dp"
	        android:textSize="25sp"
	        android:text="@string/reminder"
	        android:onClick="saveReminderDetails" />
	</RelativeLayout>

	<TextView
	    android:id="@+id/alarm_time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/title"
	    android:layout_centerHorizontal="true"
	    android:ems="10"
	    android:layout_marginTop="20dp"
	    android:gravity="center"
	    android:text="@string/alarm"
	    android:textSize="16sp" />
	
	<EditText
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="15dp"
	    android:background="#bdbdbd"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/hint_description"
	    android:padding="20dp"
	    android:textSize="20sp" />

	<android.widget.AnalogClock
	    android:id="@+id/analogClock1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/choose_time"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="25dp" />

</RelativeLayout>